Fixed some spacing issues again, fixed some colors not working together, added index.js to get the sidebar/filter functional

--- a/global.scss
+++ b/global.scss
@@ -2,6 +2,7 @@
 
 :root {  
     --color-theme: #203354;
+    --color-theme-secondary: #DCE5F4;
     --color-theme-light: #F6FAFD;
     --color-primary: #ee6352;
     --color-secondary: #181E27;
